# Whatever

./: .gitignore  Animation.cpp  Animation.hpp  CMakeLists.txt  Camera.hpp  Character.hpp  Handler.cpp  Handler.hpp  Main.cpp  Player.cpp  Player.hpp  README.md
block/: Block.cpp  Block.hpp  Outer.hpp
cmake_modules/: FindSFML.cmake
include/: json.hpp
src/: Flags.hpp  Main.cpp  constTypes.hpp
src/game/: Application.cpp  Application.hpp  MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.hpp  SplashState.cpp  SplashState.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/graphics/: Animation.cpp  Animation.hpp  Codex.cpp  Codex.hpp
src/gui/: Item.cpp  Item.hpp  Menu.cpp  Menu.hpp
src/objects/: Block.cpp  Block.hpp  GameObject.hpp  Player.cpp  Player.hpp
src/objects/block/: Block.cpp  Block.hpp  Inner.cpp  Inner.hpp  Outer.cpp
src/objects/objectState/: CastState.cpp  CastState.hpp  DeadState.hpp  EntityState.cpp  EntityState.hpp  EntityStateMachine.cpp  EntityStateMachine.hpp  NormalState.cpp  NormalState.hpp
src/objects/property/: IProperty.cpp  IProperty.hpp  PropertyManager.cpp  PropertyManager.hpp  TProperty.hpp
src/penner/: Easing.hpp  Fader.cpp  Fader.hpp  Tween.hpp
src/scene/: Fragment.cpp  Fragment.hpp  Scene.cpp  Scene.hpp
src/utils/: Misc.hpp
src/window/: Camera.cpp  Camera.hpp  Handler.cpp  Handler.hpp
